// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsersAddForm /> should render properly after permissions are loaded 1`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-113 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-110 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-112 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-112 button,
.emotion-112 a {
  margin-right: 16px;
}

.emotion-111 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-111:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-111[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-111,
.emotion-111:hover,
.emotion-111:visited {
  background-color: #73b61c;
}

.emotion-111:hover {
  background-color: #96c955;
}

.emotion-111[aria-disabled=true] {
  background-color: #808080;
}

<div>
  <h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>
  <div
    className="emotion-6"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-5"
    >
      <input
        className="emotion-2"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>
  <form
    action=""
    className="emotion-113"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10"
    >
      <label
        className="emotion-7"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-9"
      >
        <input
          autoFocus={true}
          className="emotion-8"
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-10"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-110"
    >
      <legend
        className="emotion-12"
      >
        Add Permissions
      </legend>
      <div
        className="emotion-13"
      />
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemMonitor"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Monitor
          </span>
          <span
            className="emotion-19"
          >
            Allows access to monitoring endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Manage
          </span>
          <span
            className="emotion-19"
          >
            Allows access to platform management endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectOverride"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Override
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to switch projects
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectDecrypt"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Decrypt
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to view encrypted project data
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ApiKeyManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Api Key Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage API keys
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read assets and associated files
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsImport"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Import
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to import assets. (created and update)
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsDelete"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Delete
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to remove assets
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectCreate"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Create
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to create projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read project files from cloud storage.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesWrite"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Write
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to store project files in cloud storage.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-112"
    >
      <button
        aria-disabled={true}
        className="emotion-111"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`<ProjectUsersAddForm /> should render properly after permissions are loaded 2`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-113 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-110 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-112 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-112 button,
.emotion-112 a {
  margin-right: 16px;
}

.emotion-111 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-111:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-111[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-111,
.emotion-111:hover,
.emotion-111:visited {
  background-color: #73b61c;
}

.emotion-111:hover {
  background-color: #96c955;
}

.emotion-111[aria-disabled=true] {
  background-color: #808080;
}

.emotion-30 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-31 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<div>
  <h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>
  <div
    className="emotion-6"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-5"
    >
      <input
        className="emotion-2"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>
  <form
    action=""
    className="emotion-113"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10"
    >
      <label
        className="emotion-7"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-9"
      >
        <input
          autoFocus={true}
          className="emotion-8"
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value="jane@email.com"
        />
      </div>
      <div
        className="emotion-10"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-110"
    >
      <legend
        className="emotion-12"
      >
        Add Permissions
      </legend>
      <div
        className="emotion-13"
      />
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemMonitor"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Monitor
          </span>
          <span
            className="emotion-19"
          >
            Allows access to monitoring endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Manage
          </span>
          <span
            className="emotion-19"
          >
            Allows access to platform management endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-30"
            defaultChecked={true}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectOverride"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-31"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Override
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to switch projects
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectDecrypt"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Decrypt
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to view encrypted project data
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ApiKeyManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Api Key Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage API keys
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read assets and associated files
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsImport"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Import
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to import assets. (created and update)
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsDelete"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Delete
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to remove assets
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectCreate"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Create
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to create projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read project files from cloud storage.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesWrite"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Write
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to store project files in cloud storage.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-112"
    >
      <button
        className="emotion-111"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`<ProjectUsersAddForm /> should render properly after permissions are loaded 3`] = `
.emotion-4 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-11 {
  padding-top: 12px;
}

.emotion-6 {
  display: block;
  color: #808080;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-7 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  color: #73b61c;
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-23 button,
.emotion-23 a {
  margin-right: 16px;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 2px solid #c92300;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #c92300;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-5 {
  padding-top: 12px;
  padding-bottom: 12px;
  color: #808080;
}

.emotion-24 {
  padding-top: 24px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-12 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  padding-top: 12px;
  color: #808080;
}

.emotion-20 {
  color: #b3b3b3;
}

.emotion-19 {
  font-weight: 700;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #808080;
}

.emotion-21:hover {
  background-color: #b3b3b3;
}

.emotion-21[aria-disabled=true] {
  background-color: #808080;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="warning.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        Users Not Added
      </div>
    </div>
  </div>
  <h3
    className="emotion-4"
  >
    Users that Need an Account
  </h3>
  <div
    className="emotion-5"
  >
    joe@zorroa.com
  </div>
  <div
    className="emotion-11"
  >
    <label
      className="emotion-6"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-10"
    >
      <input
        className="emotion-7"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-9"
      >
        <button
          className="emotion-8"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>
  <div
    className="emotion-24"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-14"
      >
        <div
          className="emotion-12"
        >
          <svg
            data-file-name="checkmark.svg"
            width={20}
          />
        </div>
        <div
          className="emotion-1"
        >
          Users Added
        </div>
      </div>
    </div>
    <h3
      className="emotion-4"
    >
      Users Added
    </h3>
    <div
      className="emotion-17"
    >
      jane@zorroa.com
    </div>
    <h3
      className="emotion-4"
    >
      Permissions
    </h3>
    <ul
      className="emotion-20"
    >
      <li
        className="emotion-19"
      >
         System Project Override
      </li>
    </ul>
    <div
      className="emotion-23"
    >
      <button
        className="emotion-21"
        onClick={[Function]}
        type="button"
      >
        Add Another User
      </button>
      <a
        className="emotion-22"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        View All
      </a>
    </div>
  </div>
</div>
`;

exports[`<ProjectUsersAddForm /> should render properly after permissions are loaded 4`] = `
.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-113 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-110 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-112 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-112 button,
.emotion-112 a {
  margin-right: 16px;
}

.emotion-111 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-111:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-111[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-111,
.emotion-111:hover,
.emotion-111:visited {
  background-color: #73b61c;
}

.emotion-111:hover {
  background-color: #96c955;
}

.emotion-111[aria-disabled=true] {
  background-color: #808080;
}

<div>
  <h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>
  <div
    className="emotion-6"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-5"
    >
      <input
        className="emotion-2"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>
  <form
    action=""
    className="emotion-113"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10"
    >
      <label
        className="emotion-7"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-9"
      >
        <input
          autoFocus={true}
          className="emotion-8"
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-10"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-110"
    >
      <legend
        className="emotion-12"
      >
        Add Permissions
      </legend>
      <div
        className="emotion-13"
      />
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemMonitor"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Monitor
          </span>
          <span
            className="emotion-19"
          >
            Allows access to monitoring endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Manage
          </span>
          <span
            className="emotion-19"
          >
            Allows access to platform management endpoints
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectOverride"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Override
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to switch projects
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="SystemProjectDecrypt"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             System Project Decrypt
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to view encrypted project data
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ApiKeyManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Api Key Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage API keys
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read assets and associated files
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsImport"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Import
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to import assets. (created and update)
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="AssetsDelete"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Assets Delete
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to remove assets
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectManage"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Manage
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to manage projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectCreate"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Create
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to create projects.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesRead"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Read
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to read project files from cloud storage.
          </span>
        </div>
      </label>
      <label
        className="emotion-21"
      >
        <div
          className="emotion-17"
        >
          <input
            className="emotion-14"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ProjectFilesWrite"
          />
          <div
            className="emotion-16"
          >
            <svg
              className="emotion-15"
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <span
            className="emotion-18"
          >
             Project Files Write
          </span>
          <span
            className="emotion-19"
          >
            Provides ability to store project files in cloud storage.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-112"
    >
      <button
        aria-disabled={true}
        className="emotion-111"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;
